@@ -13,9 +13,11 @@ FilePeruser User Guide
            directories must be properly escaped to function properly
        -x and --exclude can be used as many times as necessary to exclude
            multiple directories from the search
+       -d and --dir can be used as many times as necessary to add root
+           directories to the search
 
 2. Requirements:
-       - A C compiler with dirent.h and sys/types.h (probably Linux or Unix [BSD, Mac])
+       - A C compiler with dirent.h and sys/types.h (something at least partly POSIX-compliant)
        
        Note:
            I do not know any more of the system requirements for this program.
